--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <title>Tech Book Club Landing Page</title>
 </head>
 <body>
-  Join the ultimate tech book club Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time. Review membership options 200+ developers joined already Read together, grow together Monthly curated tech reads selected by industry experts Virtual and in-person meetups for deep-dive discussions Early access to new tech book releases Author Q&A sessions with tech thought leaders Not your average book club Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications. Your tech reading journey 1 Choose your membership tier 2 Get your monthly book selection 3 Join our discussion forums 4 Attend exclusive meetups Membership options Starter $19/month 1 book/month Online forums Subscribe now Pro $29/month 2 books/month Virtual meetups Subscribe now Enterprise Custom Team access Private sessions Talk to us "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!" Sarah Chen, Software Architect Ready to debug your reading list? Review membership options 200+ developers joined already © 2024 - Tech Book Club
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#books">Books</a></li>
+        <li><a href="#join">Join</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    Join the ultimate tech book club Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time. Review membership options 200+ developers joined already Read together, grow together Monthly curated tech reads selected by industry experts Virtual and in-person meetups for deep-dive discussions Early access to new tech book releases Author Q&A sessions with tech thought leaders Not your average book club Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications. Your tech reading journey 1 Choose your membership tier 2 Get your monthly book selection 3 Join our discussion forums 4 Attend exclusive meetups Membership options Starter $19/month 1 book/month Online forums Subscribe now Pro $29/month 2 books/month Virtual meetups Subscribe now Enterprise Custom Team access Private sessions Talk to us "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!" Sarah Chen, Software Architect Ready to debug your reading list? Review membership options 200+ developers joined already 
+  </main>
+  <footer>
+    <p>&copy; 2024 - Tech Book Club</p>
+  </footer>
+  
 </body>
 </html>
