--- a/index.html
+++ b/index.html
@@ -8,20 +8,38 @@
   <title>Tech Book Club Landing Page</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#books">Books</a></li>
-        <li><a href="#join">Join</a></li>
-      </ul>
-    </nav>
+  <header class="row">
+    <img src="./assets/images/logo.svg" alt="Tech Book Club logo">
   </header>
   <main>
-    Join the ultimate tech book club Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time. Review membership options 200+ developers joined already Read together, grow together Monthly curated tech reads selected by industry experts Virtual and in-person meetups for deep-dive discussions Early access to new tech book releases Author Q&A sessions with tech thought leaders Not your average book club Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications. Your tech reading journey 1 Choose your membership tier 2 Get your monthly book selection 3 Join our discussion forums 4 Attend exclusive meetups Membership options Starter $19/month 1 book/month Online forums Subscribe now Pro $29/month 2 books/month Virtual meetups Subscribe now Enterprise Custom Team access Private sessions Talk to us "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!" Sarah Chen, Software Architect Ready to debug your reading list? Review membership options 200+ developers joined already 
+    <div class="row">
+      <div class="hero">
+        <div class="column">
+          <h1>Join the ultimate tech book club</h1> 
+          <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time.</p>
+          <button>Review membership options</button>
+        </div>
+        <div class="column">
+          <img class = hero_img src="./assets/images/image-hero-desktop.webp" alt="Tech Book Club hero image">
+        </div>
+      </div>
+    </div>
+
+      200+ developers joined already Read together, grow together Monthly curated tech reads selected by industry experts Virtual and in-person meetups for deep-dive discussions Early access to new tech book releases Author Q&A sessions with tech thought leaders Not your average book club Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications. Your tech reading journey 1 Choose your membership tier 2 Get your monthly book selection 3 Join our discussion forums 4 Attend exclusive meetups Membership options Starter $19/month 1 book/month Online forums Subscribe now Pro $29/month 2 books/month Virtual meetups Subscribe now Enterprise Custom Team access Private sessions Talk to us "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!" Sarah Chen, Software Architect 
   </main>
   <footer>
-    <p>&copy; 2024 - Tech Book Club</p>
+    <div class="footer_section">
+      <h2>Ready to debug your reading list?</h2>
+      <button>Review membership options <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" fill="none" viewBox="0 0 24 25"><path fill="#fff" d="m3.96 8.742.72 3.12c1.224-.12 2.328-.504 3.264-1.2.936-.696 1.584-1.512 1.896-2.496v11.856h2.76V8.166c.672 1.944 2.688 3.48 5.16 3.696l.72-3.12c-3.384-.12-5.52-2.112-5.88-5.544H9.84c-.36 3.456-2.496 5.424-5.88 5.544Z"/></svg></button>
+      <p>200+ developers joined already</p>
+    </div>
+    <div class="footer_copyright row">
+      <p>&copy; 2024 - Tech Book Club</p>
+      <div class="footer_social">
+        <a href="#"><img src="./assets/images/logo-bluesky.svg" alt="bluesky icon"></a>
+        <a href="#"><img src="./assets/images/logo-linkedin.svg" alt="linkedin icon"></a>
+      </div>
+    </div>
   </footer>
   
 </body>
