update html and css for hero section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <title>Tech Book Club Landing Page</title>
 </head>
 <body>
-  <header class="row">
-    <img src="./assets/images/logo.svg" alt="Tech Book Club logo">
+  <header>
+    <div class="row">
+      <img src="./assets/images/logo.svg" alt="Tech Book Club logo">
+    </div>
   </header>
   <main>
     <div class="row">
       <div class="hero">
-        <div class="column">
+        <div class="hero-text">
           <h1>Join the ultimate tech book club</h1> 
           <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time.</p>
           <button>Review membership options</button>
@@ -25,7 +27,32 @@
       </div>
     </div>
 
-      200+ developers joined already Read together, grow together Monthly curated tech reads selected by industry experts Virtual and in-person meetups for deep-dive discussions Early access to new tech book releases Author Q&A sessions with tech thought leaders Not your average book club Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications. Your tech reading journey 1 Choose your membership tier 2 Get your monthly book selection 3 Join our discussion forums 4 Attend exclusive meetups Membership options Starter $19/month 1 book/month Online forums Subscribe now Pro $29/month 2 books/month Virtual meetups Subscribe now Enterprise Custom Team access Private sessions Talk to us "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!" Sarah Chen, Software Architect 
+      200+ developers joined already 
+    <section class="row">
+      <div class="column">
+        <img src="./assets/images/image-read-together-desktop.webp" alt="">
+      </div>
+      <div class="column">
+        <h2>Read together, grow together</h2>
+        <p>Monthly curated tech reads selected by industry experts</p>
+        <p>Virtual and in-person meetups for deep-dive discussions</p>
+        <p>Early access to new tech book releases</p>
+        <p>Author Q&A sessions with tech thought leaders</p>
+      </div>
+    </section>
+    <section>
+      <div class="row">
+        <div class="column">
+          <h2>Not your average book club</h2>
+          <p>Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications.</p>
+        </div>
+        <div class="column">
+          <img src="./assets/images/image-not-average-desktop.webp" alt="">
+        </div>
+      </div>
+    </section>  
+    <section></section>
+      Your tech reading journey 1 Choose your membership tier 2 Get your monthly book selection 3 Join our discussion forums 4 Attend exclusive meetups Membership options Starter $19/month 1 book/month Online forums Subscribe now Pro $29/month 2 books/month Virtual meetups Subscribe now Enterprise Custom Team access Private sessions Talk to us "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!" Sarah Chen, Software Architect 
   </main>
   <footer>
     <div class="footer_section">
